--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
-body
-{
-
+.heading {
+    width: 100%;
+    text-align: left;
+}
+.heading h3 {
+    display: inline;
+}
+.heading button {
+float: right;
+border: 1px solid white;
+}
+#start, #status {
+    font-size: 22px;
 }
