--- a/style.css
+++ b/style.css
@@ -12,3 +12,8 @@ border: 1px solid white;
 #start, #status {
     font-size: 22px;
 }
+h4 {
+    background-color: wheat;
+    line-height: 2;
+    margin: 0px;
+}
