--- a/style.css
+++ b/style.css
@@ -1,19 +1,35 @@
-.heading {
+body
+{
+    background-position: center;
+    background-size: cover;
+}
+.heading{
     width: 100%;
     text-align: left;
+    margin-bottom: 5px;
 }
-.heading h3 {
+.heading h3{
     display: inline;
-}
-.heading button {
-float: right;
-border: 1px solid white;
-}
-#start, #status {
     font-size: 22px;
 }
-h4 {
+.heading button{
+    float: right;
+    border: 1px solid white;
+}
+.footer{
     background-color: wheat;
+    width: 100%;
+    margin-bottom: 0px;
+    color: white;
     line-height: 2;
-    margin: 0px;
+    bottom: 0px;
+    position: sticky;
+}
+.modal-body{
+    text-align: left;
+}
+canvas{
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px white;
+    border: 2px solid white;
 }
